# blackjack-battle-py

./: .env.example  Dockerfile  README.md  pyproject.toml
app/: config.py  dependencies.py  main.py  routes.py  sockets.py
app/blackjack/: card_calculator.py  card_manager.py  dealer.py  deck.py  dependencies.py  game.py  logger.py  player.py  player_manager.py  score_calculator.py
app/blackjack/json_example/: hand_data.json
app/models/: connection.py
app/services/: game_service.py  state_service.py
tests/unit/: test_card_manager.py  test_game_service.py  test_player.py
tests/unit/test_blackjack/: test_add_players.py  test_card_calculator.py  test_core.py  test_play_round.py  test_score_calculator.py
