[tool.poetry]
name = "blackjack-battle-py"
version = "0.1.0"
description = ""
authors = ["ldearsley2 <ldearsley2@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
pydantic-settings = "^2.7.1"
requests = "^2.32.3"
ruff = "^0.9.10"
websockets = "^15.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "app.main:start"
dev = "app.main:start_dev"